--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
             <input class="btn" type="submit" value="Clear" />
         </div>
     </form>
+
+    <div>
+        <h1>Validate</h1>
+
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://grgbiki.github.io/lab4/">
+            <img src="css_checker.png" alt=" Valid CSS!" width="88px" height="31px" />
+        </a>
+        <a href="https://validator.w3.org/nu/?doc=https://grgbiki.github.io/lab4/">
+            <img src="html_checker.png" alt="Validate" width="88px" height="31px" />
+        </a>
+    </div>
 </body>
 
 </html>
