--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <link rel="stylesheet" href="styles.css">
@@ -111,10 +111,10 @@
         <h1>Validate</h1>
 
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://grgbiki.github.io/lab4/">
-            <img src="css_checker.png" alt=" Valid CSS!" width="88px" height="31px" />
+            <img src="css_checker.png" alt=" Valid CSS!" width="88" height="31" />
         </a>
         <a href="https://validator.w3.org/nu/?doc=https://grgbiki.github.io/lab4/">
-            <img src="html_checker.png" alt="Validate" width="88px" height="31px" />
+            <img src="html_checker.png" alt="Validate" width="88" height="31" />
         </a>
     </div>
 </body>
